# navigation

./: .gitignore  README.md
scripts/: viz_obstacles.py
src/g1_description/: CMakeLists.txt  package.xml
src/g1_description/launch/: display.launch.py
src/g1_description/urdf/: g1_body.urdf
src/g1_mujoco_sim/: package.xml  setup.cfg  setup.py
src/g1_mujoco_sim/g1_mujoco_sim/: g1_sim_node.py  held_filter_metrics_node.py  held_objects.py  self_filter_viz_node.py
src/g1_mujoco_sim/launch/: sim.launch.py
src/g1_mujoco_sim/worlds/: g1_nav_scene.xml
src/g1_nav2_bringup/: CMakeLists.txt  package.xml
src/g1_nav2_bringup/config/: nav2_params.yaml  pointcloud_to_laserscan.yaml  robot_body_filter_camera.yaml  robot_body_filter_lidar.yaml  slam_toolbox.yaml
src/g1_nav2_bringup/launch/: bringup.launch.py  nav2.launch.py
src/g1_nav2_bringup/maps/: README.md
src/g1_nav2_bringup/rviz/: g1_nav.rviz
