<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_nav2_bringup</name>
  <version>0.1.0</version>
  <description>nav2 + SLAM bringup, costmap/filter configs and RViz for the G1 MuJoCo sim.</description>
  <maintainer email="cychoi@genon.ai">cychoi</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>g1_description</exec_depend>
  <exec_depend>g1_mujoco_sim</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
